Added reading window, thread for library, book sorting
сделана заготовка под окно чтения, переходы, меню
доделаны настройки
обработка методов работы с книгами выделана в отдельный класс в своем
потоке (уиии, оно не виснет)
добавлена было-сортировка книг в библиотеке

--- a/parser-test/mainwindow.ui
+++ b/parser-test/mainwindow.ui
@@ -29,7 +29,7 @@
    <enum>Qt::NoContextMenu</enum>
   </property>
   <property name="windowTitle">
-   <string>EbaReader</string>
+   <string>Reader</string>
   </property>
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
