--- a/parser-test/mainwindow.ui
+++ b/parser-test/mainwindow.ui
@@ -76,7 +76,7 @@ outline: red solid 8px;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:rgb(46, 49, 57);</string>
+    <string notr="true"/>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <property name="spacing">
@@ -169,27 +169,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -225,27 +225,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -281,27 +281,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -380,27 +380,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -436,27 +436,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -492,27 +492,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -603,27 +603,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -659,27 +659,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -715,27 +715,27 @@ outline: red solid 8px;
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>46</red>
-               <green>49</green>
-               <blue>57</blue>
+               <red>255</red>
+               <green>0</green>
+               <blue>0</blue>
               </color>
              </brush>
             </colorrole>
@@ -843,15 +843,7 @@ outline: red solid 8px;
            </size>
           </property>
           <property name="styleSheet">
-           <string notr="true">QPushButton{
-border:none;
-background-color:rgb(30, 33, 36);
-
-}
-QPushButton:hover
-{
-background-color:rgb(25, 27, 31);
-}</string>
+           <string notr="true"/>
           </property>
           <property name="text">
            <string notr="true"/>
@@ -1253,10 +1245,13 @@ background-color:rgb(25, 27, 31);
                </size>
               </property>
               <property name="text">
-               <string notr="true">M</string>
+               <string notr="true"/>
               </property>
               <property name="shortcut">
                <string notr="true"/>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -1275,7 +1270,7 @@ background-color:rgb(25, 27, 31);
                </size>
               </property>
               <property name="text">
-               <string notr="true">+</string>
+               <string notr="true"/>
               </property>
               <property name="shortcut">
                <string notr="true"/>
@@ -1297,7 +1292,7 @@ background-color:rgb(25, 27, 31);
                </size>
               </property>
               <property name="text">
-               <string notr="true">-</string>
+               <string notr="true"/>
               </property>
               <property name="shortcut">
                <string notr="true"/>
