--- a/parser-test/settings_programlayout.ui
+++ b/parser-test/settings_programlayout.ui
@@ -379,7 +379,7 @@
           </size>
          </property>
          <property name="text">
-          <string/>
+          <string notr="true"/>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -401,7 +401,7 @@
           </size>
          </property>
          <property name="text">
-          <string/>
+          <string notr="true"/>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -474,7 +474,7 @@
           </size>
          </property>
          <property name="text">
-          <string/>
+          <string notr="true"/>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -496,7 +496,7 @@
           </size>
          </property>
          <property name="text">
-          <string/>
+          <string notr="true"/>
          </property>
          <property name="checkable">
           <bool>true</bool>
