--- a/parser-test/readingwindow.ui
+++ b/parser-test/readingwindow.ui
@@ -152,9 +152,12 @@ p, li { white-space: pre-wrap; }
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Fixed</enum>
+         </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>300</width>
+           <width>100</width>
            <height>0</height>
           </size>
          </property>
