--- a/parser-test/settings_programlayout.ui
+++ b/parser-test/settings_programlayout.ui
@@ -46,17 +46,8 @@
    </property>
    <item>
     <layout class="QFormLayout" name="formLayout">
-     <property name="sizeConstraint">
-      <enum>QLayout::SetFixedSize</enum>
-     </property>
      <property name="fieldGrowthPolicy">
       <enum>QFormLayout::FieldsStayAtSizeHint</enum>
-     </property>
-     <property name="horizontalSpacing">
-      <number>0</number>
-     </property>
-     <property name="verticalSpacing">
-      <number>0</number>
      </property>
      <item row="0" column="0">
       <widget class="QLabel" name="InterfaceStyle">
@@ -300,7 +291,7 @@
       </widget>
      </item>
      <item row="7" column="0" colspan="2">
-      <widget class="Line" name="line_65">
+      <widget class="Line" name="line_68">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -319,6 +310,76 @@
       </widget>
      </item>
      <item row="8" column="0">
+      <widget class="QLabel" name="TurnByTap">
+       <property name="minimumSize">
+        <size>
+         <width>180</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>180</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Turn pages with the click</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QComboBox" name="TurnByTapBox">
+       <property name="minimumSize">
+        <size>
+         <width>300</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>180</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="currentText">
+        <string>No</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>No</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Yes</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="9" column="0" colspan="2">
+      <widget class="Line" name="line_65">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>10</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>480</width>
+         <height>10</height>
+        </size>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="0">
       <spacer name="verticalSpacer_2">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -334,7 +395,7 @@
        </property>
       </spacer>
      </item>
-     <item row="9" column="0">
+     <item row="11" column="0">
       <widget class="QLabel" name="TurnForward">
        <property name="minimumSize">
         <size>
@@ -356,7 +417,7 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="11" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <property name="spacing">
         <number>0</number>
@@ -410,7 +471,7 @@
        </item>
       </layout>
      </item>
-     <item row="10" column="0" colspan="2">
+     <item row="12" column="0" colspan="2">
       <widget class="Line" name="line_66">
        <property name="minimumSize">
         <size>
@@ -429,7 +490,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="0">
+     <item row="13" column="0">
       <widget class="QLabel" name="TurnBackward">
        <property name="minimumSize">
         <size>
@@ -451,7 +512,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
+     <item row="13" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <property name="spacing">
         <number>0</number>
@@ -505,7 +566,7 @@
        </item>
       </layout>
      </item>
-     <item row="12" column="0" colspan="2">
+     <item row="14" column="0" colspan="2">
       <widget class="Line" name="line_67">
        <property name="minimumSize">
         <size>
