--- a/Sources/library_layout.ui
+++ b/Sources/library_layout.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="VLayout">
+  <layout class="QVBoxLayout" name="VLayout" stretch="0,0">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -326,8 +326,28 @@
      </item>
     </layout>
    </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="leftMargin">
+      <number>15</number>
+     </property>
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="Library" name="LibraryView"/>
+     </item>
+    </layout>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Library</class>
+   <extends>QListView</extends>
+   <header>library.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
