--- a/Sources/login_window.ui
+++ b/Sources/login_window.ui
@@ -33,16 +33,16 @@
     <widget class="QWidget" name="MainWidget" native="true">
      <layout class="QGridLayout" name="gridLayout_2">
       <property name="leftMargin">
-       <number>0</number>
+       <number>3</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+       <number>3</number>
       </property>
       <property name="rightMargin">
-       <number>0</number>
+       <number>3</number>
       </property>
       <property name="bottomMargin">
-       <number>0</number>
+       <number>3</number>
       </property>
       <property name="spacing">
        <number>0</number>
@@ -271,6 +271,11 @@
         </item>
         <item>
          <widget class="QLabel" name="Error">
+          <property name="font">
+           <font>
+            <pointsize>12</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Error!</string>
           </property>
